tests/compile/fail/aggregate_literal_without_expression.stderr
error[E0277]: the trait bound `f64: Expression` is not satisfied
 --> tests/compile/fail/aggregate_literal_without_expression.rs:4:63
  |
4 |     let _ = aggregate::<diesel::sql_types::Double>("sum").arg(1.0_f64);
  |                                                           --- ^^^^^^^ the trait `Expression` is not implemented for `f64`
  |                                                           |
  |                                                           required by a bound introduced by this call
  |
  = help: the following other types implement trait `Expression`:
            &T
            AggregateCall<Args, ST>
            AliasedColumn<C>
            AliasedField<S, C>
            BinaryParametricAggregate<Left, Right, ST>
            Box<T>
            CaseWhen<expression::case_when::non_public_types::CaseWhenConditionsIntermediateNode<W, T, Whens>, E>
            CaseWhen<expression::case_when::non_public_types::CaseWhenConditionsLeaf<W, T>, expression::case_when::non_public_types::ElseExpression<E>>
          and $N others
note: required by a bound in `AggregateBuilder::<ST>::arg`
 --> src/aggregates.rs
  |
  |     pub fn arg<Expr>(self, expr: Expr) -> AggregateCall<OneAggregateArg<Expr>, ST>
  |            --- required by a bound in this associated function
  |     where
  |         Expr: Expression,
  |               ^^^^^^^^^^ required by this bound in `AggregateBuilder::<ST>::arg`
